fix(SITE-11206): fix article links padding on mobile devices

--- a/packages/site-article/src/components/ArticleLinks/styles.module.scss
+++ b/packages/site-article/src/components/ArticleLinks/styles.module.scss
@@ -5,6 +5,10 @@
 
   padding: 24px;
   border: var.$border-width-general-xs var.$border-styles-solid var.$sys-neutral-decor-default;
+
+  &[data-layout-type='mobile'] {
+    padding: 16px;
+  }
 }
 
 .title {
